# claude-plugins

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  veans-skill.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
burn-rate/: CHANGELOG.md  README.md
burn-rate/.claude-plugin/: plugin.json
burn-rate/hooks/: hooks.json  log-usage.py
burn-rate/skills/burn-rate/: SKILL.md  active_hours_analysis.py  burn_rate.py  projection.py  render-rates.py  (+4 more)
burn-rate/skills/burn-rate-setup/: SKILL.md  setup-statusline.py
burn-rate/tests/: verify_phase_a.py
craft-projects/: README.md
craft-projects/.claude-plugin/: plugin.json
dex-fabric-grocy/: README.md
dex-fabric-grocy/.claude-plugin/: plugin.json
dex-fabric-grocy/agents/: grocy-bot.md
dex-fabric-grocy/references/: fabric-comms-conventions.md
get-current-time/.claude-plugin/: plugin.json
memory/: MEMORY.md  project_versioning.md
skills/session-sync/: SKILL.md
src/tg_local_client/: _version.py
tests/: test_db.py  test_tail.py
tg-local-client/: README.md
tg-local-client/.claude-plugin/: plugin.json
tg-local-client/agents/: tg-local-agent.md
tg-local-client/docs/: fabric-comms-conventions.md
tg-local-client/mcp-src/: README.md  config.example.json  pyproject.toml
tg-local-client/mcp-src/docs/: migrating-to-generic-client.md
tg-local-client/mcp-src/src/tg_local_client/: __init__.py  bootstrap.py  config.py  db.py  listener.py  mcp_server.py  tail.py  triage.py
tg-local-client/mcp-src/tests/: test_bootstrap.py  test_config.py  test_listener.py  test_mcp_tools.py
(+6 files in other folders)
