[project]
name = "tg-local-client"
version = "0.1.0"
description = "Generic single-bot Telegram client (MCP + poller) for a local agent"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.28.0",
  "fastmcp>=3.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
tg-local-mcp = "tg_local_client.mcp_server:run"
tg-local-tail = "tg_local_client.tail:run"
tg-local-bootstrap = "tg_local_client.bootstrap:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_local_client"]
